--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@ packages/*/lib-es
 packages/*/types
 jsdoc
 
+### Custom (create-react-app) ###
+/.pnp
+.pnp.js
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 scripts/flow/*/.flowconfig
 *.pyc
