--- a/packages/codistica-scriptfiber/package.json
+++ b/packages/codistica-scriptfiber/package.json
@@ -1,7 +1,6 @@
 {
     "name": "@codistica/scriptfiber",
     "version": "0.0.0",
-    "private": true,
     "publishConfig": {
         "access": "public"
     },
@@ -59,7 +58,16 @@
     "dependencies": {
         "@babel/runtime-corejs3": "^7.5.5",
         "@codistica/browser": "^0.0.0",
-        "core-js": "^3.1.4"
+        "@codistica/core": "^0.0.0",
+        "@codistica/dev-tools": "^0.0.0",
+        "@codistica/node": "^0.0.0",
+        "@codistica/types": "^0.0.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "compression-webpack-plugin": "^3.1.0",
+        "core-js": "^3.1.4",
+        "webpack": "^4.42.1",
+        "webpack-bundle-analyzer": "^3.7.0",
+        "webpackbar": "^4.0.0"
     },
     "devDependencies": {
         "chai": "^4.2.0"
