[FIX] [*] - Change whole repository license type from ISC to MIT.

--- a/packages/codistica-demo/package.json
+++ b/packages/codistica-demo/package.json
@@ -27,7 +27,7 @@
         }
     ],
     "homepage": "https://www.codistica.com",
-    "license": "ISC",
+    "license": "MIT",
     "main": "./lib/index.js",
     "module": "./lib-es/index.js",
     "directories": {
