--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "@babel/preset-flow": "^7.9.0",
         "@babel/preset-react": "^7.9.4",
         "@codistica/babel-preset-default": "^1.0.1",
+        "@codistica/eslint-config-default": "^1.0.1",
         "@codistica/husky-hooks-handlers": "^1.0.1",
         "@types/chai": "^4.2.11",
         "@types/mocha": "^7.0.2",
