[POLISH] [*] - Clean dependencies before publish.

--- a/package.json
+++ b/package.json
@@ -61,10 +61,11 @@
         "@types/chai": "^4.2.11",
         "@types/mocha": "^7.0.2",
         "@types/node": "^13.11.0",
-        "babel-eslint": "^10.1.0",
+        "@types/react": "^16.9.34",
+        "@types/tapable": "^1.0.5",
+        "@types/webpack": "^4.41.12",
         "cross-env": "^7.0.2",
         "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-flowtype": "^4.7.0",
         "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-jsdoc": "^22.1.0",
