--- a/packages/codistica-browser/package.json
+++ b/packages/codistica-browser/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@codistica/browser",
-    "version": "0.0.0",
+    "version": "1.0.0-beta.0",
     "publishConfig": {
         "access": "public"
     },
@@ -56,7 +56,7 @@
     },
     "dependencies": {
         "@babel/runtime-corejs3": "^7.5.5",
-        "@codistica/core": "^0.0.0",
+        "@codistica/core": "^1.0.0-beta.0",
         "core-js": "^3.1.4",
         "eventemitter3": "^4.0.0"
     },
