--- a/packages/codistica-demo/package.json
+++ b/packages/codistica-demo/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@codistica/demo",
-    "version": "0.0.0",
+    "version": "1.0.0-beta.0",
     "private": true,
     "description": "Codistica demo package.",
     "keywords": [
