--- a/packages/codistica-node/package.json
+++ b/packages/codistica-node/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@codistica/node",
-    "version": "0.0.0",
+    "version": "1.0.0-beta.0",
     "publishConfig": {
         "access": "public"
     },
@@ -56,8 +56,8 @@
     },
     "dependencies": {
         "@babel/runtime-corejs3": "^7.5.5",
-        "@codistica/core": "^0.0.0",
-        "@codistica/types": "^0.0.0",
+        "@codistica/core": "^1.0.0-beta.0",
+        "@codistica/types": "^1.0.0-beta.0",
         "chalk": "^2.4.2",
         "core-js": "^3.1.4"
     },
