--- a/packages/codistica-react/package.json
+++ b/packages/codistica-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@codistica/react",
-    "version": "0.0.0",
+    "version": "1.0.0-beta.0",
     "publishConfig": {
         "access": "public"
     },
@@ -61,8 +61,8 @@
     },
     "dependencies": {
         "@babel/runtime-corejs3": "^7.5.5",
-        "@codistica/browser": "^0.0.0",
-        "@codistica/core": "^0.0.0",
+        "@codistica/browser": "^1.0.0-beta.0",
+        "@codistica/core": "^1.0.0-beta.0",
         "classnames": "^2.2.6",
         "core-js": "^3.1.4",
         "eventemitter3": "^4.0.0",
