--- a/packages/codistica-scriptfiber/package.json
+++ b/packages/codistica-scriptfiber/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@codistica/scriptfiber",
-    "version": "0.0.0",
+    "version": "1.0.0-beta.0",
     "publishConfig": {
         "access": "public"
     },
@@ -56,11 +56,11 @@
     },
     "dependencies": {
         "@babel/runtime-corejs3": "^7.5.5",
-        "@codistica/browser": "^0.0.0",
-        "@codistica/core": "^0.0.0",
-        "@codistica/dev-tools": "^0.0.0",
-        "@codistica/node": "^0.0.0",
-        "@codistica/types": "^0.0.0",
+        "@codistica/browser": "^1.0.0-beta.0",
+        "@codistica/core": "^1.0.0-beta.0",
+        "@codistica/dev-tools": "^1.0.0-beta.0",
+        "@codistica/node": "^1.0.0-beta.0",
+        "@codistica/types": "^1.0.0-beta.0",
         "clean-webpack-plugin": "^3.0.0",
         "compression-webpack-plugin": "^3.1.0",
         "core-js": "^3.1.4",
