--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "lint": "eslint \"./packages/*/src/**/*.js\"",
         "prepack": "yarn run build",
         "prettify": "prettier --loglevel warn --write \"**/*.{js,json}\"",
+        "run:demo": "yarn workspace @codistica/demo run start",
         "run:react": "yarn workspace @codistica/react run storybook",
         "test": "mocha \"./packages/*/lib/__tests__/*.test.js\"",
         "test:quick": "yarn run build:lib && yarn run test",
@@ -72,7 +73,7 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^3.1.2",
         "eslint-plugin-react": "^7.19.0",
-        "flow-bin": "^0.102.0",
+        "flow-bin": "^0.123.0",
         "flow-copy-source": "^2.0.9",
         "husky": "^4.2.3",
         "jsdoc": "^3.6.3",
