--- a/packages/codistica-demo/package.json
+++ b/packages/codistica-demo/package.json
@@ -53,15 +53,17 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
     "dependencies": {
+        "@codistica/react": "^1.0.0-beta.1",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-scripts": "3.4.1"
+    },
+    "devDependencies": {
+        "@types/jest": "^25.2.1",
+        "node-sass": "^4.13.1"
     }
 }
