[NEW] [*] - Make JSDoc local for each package.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ packages/*/dist
 packages/*/lib
 packages/*/lib-es
 packages/*/types
-jsdoc
+packages/*/jsdoc
 
 ### Custom (create-react-app) ###
 /.pnp
