--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
         "babel:lib-es": "lerna exec --ignore @codistica/demo --parallel \"cross-env NODE_ENV=production cross-env NPM_CONFIG_ES_MODULES=true babel --root-mode upward ./src --out-dir ./lib-es --copy-files\"",
         "build": "yarn run clean && yarn run build:dist && yarn run build:lib && yarn run build:lib-es && yarn run build:types && yarn run build:jsdoc && yarn run test",
         "build:dist": "exit 0",
-        "build:jsdoc": "jsdoc -c ./.jsdocrc.js",
+        "build:jsdoc": "lerna exec --ignore @codistica/demo --parallel \"jsdoc -c ../../.jsdocrc.js\"",
         "build:lib": "yarn run babel:lib && yarn run flow:copy-lib",
         "build:lib-es": "yarn run babel:lib-es && yarn run flow:copy-lib-es",
         "build:types": "yarn run tsc",
         "bump": "lerna version --no-push --no-changelog --no-git-tag--version",
         "clean": "yarn run clean:dist && yarn run clean:jsdoc && yarn run clean:lib && yarn run clean:lib-es && yarn run clean:types && yarn run clean:coverage",
         "clean:dist": "rimraf \"./packages/*/dist\"",
-        "clean:jsdoc": "rimraf ./jsdoc",
+        "clean:jsdoc": "rimraf \"./packages/*/jsdoc\"",
         "clean:lib": "rimraf \"./packages/*/lib\"",
         "clean:lib-es": "rimraf \"./packages/*/lib-es\"",
         "clean:types": "rimraf \"./packages/*/types\"",
