--- a/packages/codistica-react/package.json
+++ b/packages/codistica-react/package.json
@@ -58,32 +58,36 @@
         "flow": "flow"
     },
     "dependencies": {
-        "@babel/runtime-corejs3": "^7.5.5",
+        "@babel/runtime-corejs3": "^7.9.2",
         "@codistica/browser": "^1.0.0-beta.1",
         "@codistica/core": "^1.0.0-beta.1",
+        "@types/node": "^13.13.4",
         "classnames": "^2.2.6",
-        "core-js": "^3.1.4",
+        "core-js": "^3.6.5",
+        "eslint-plugin-prettier": "^3.1.3",
         "eventemitter3": "^4.0.0",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
+        "mocha": "^7.1.2",
+        "prettier": "^2.0.5",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
         "react-html-id": "^0.1.5",
         "react-spring": "^8.0.27"
     },
     "devDependencies": {
-        "@babel/core": "^7.4.5",
-        "@storybook/addon-actions": "^5.1.9",
-        "@storybook/addon-backgrounds": "^5.1.10",
-        "@storybook/addon-links": "^5.1.9",
-        "@storybook/addons": "^5.1.9",
-        "@storybook/react": "^5.1.9",
-        "babel-loader": "^8.0.6",
+        "@babel/core": "^7.9.0",
+        "@storybook/addon-actions": "^5.3.18",
+        "@storybook/addon-backgrounds": "^5.3.18",
+        "@storybook/addon-links": "^5.3.18",
+        "@storybook/addons": "^5.3.18",
+        "@storybook/react": "^5.3.18",
+        "babel-loader": "^8.1.0",
         "chai": "^4.2.0",
-        "css-loader": "^3.0.0",
-        "node-sass": "^4.12.0",
-        "sass-loader": "^7.1.0",
-        "style-loader": "^0.23.1"
+        "css-loader": "^3.5.3",
+        "node-sass": "^4.14.0",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.2.0"
     },
     "peerDependencies": {
-        "node-sass": "^4.12.0"
+        "node-sass": "^4.14.0"
     }
 }
