--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "clean:lib-es": "rimraf \"./packages/*/lib-es\"",
         "clean:types": "rimraf \"./packages/*/types\"",
         "clean:coverage": "rimraf ./.nyc_output",
-        "coverage": "nyc yarn run test",
+        "coverage": "nyc --reporter=lcov yarn run test",
         "flow:copy-lib": "lerna exec --parallel --scope @codistica/react \"flow-copy-source ./src ./lib\"",
         "flow:copy-lib-es": "lerna exec --parallel --scope @codistica/react \"flow-copy-source ./src ./lib-es\"",
         "lint": "eslint \"./packages/*/src/**/*.js\"",
