--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "build:lib": "yarn run babel:lib && yarn run flow:copy-lib",
         "build:lib-es": "yarn run babel:lib-es && yarn run flow:copy-lib-es",
         "build:types": "yarn run tsc",
+        "bump": "lerna version --no-push --no-changelog --no-git-tag--version",
         "clean": "yarn run clean:dist && yarn run clean:jsdoc && yarn run clean:lib && yarn run clean:lib-es && yarn run clean:types && yarn run clean:coverage",
         "clean:dist": "rimraf \"./packages/*/dist\"",
         "clean:jsdoc": "rimraf ./jsdoc",
