--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -2,7 +2,7 @@ name: Pull Request
 
 on:
   pull_request:
-    branches: [ develop, master ]
+    branches: [ develop ]
     types: [ opened, synchronize ]
 
 jobs:
