--- a/packages/codistica-react/package.json
+++ b/packages/codistica-react/package.json
@@ -61,6 +61,7 @@
         "@babel/runtime-corejs3": "^7.9.2",
         "@codistica/browser": "^1.0.0-beta.1",
         "@codistica/core": "^1.0.0-beta.1",
+        "@codistica/types": "^1.0.0-beta.1",
         "@types/node": "^13.13.4",
         "classnames": "^2.2.6",
         "core-js": "^3.6.5",
