--- a/packages/codistica-react/package.json
+++ b/packages/codistica-react/package.json
@@ -77,6 +77,7 @@
     "devDependencies": {
         "@babel/core": "^7.9.0",
         "@storybook/addon-backgrounds": "^5.3.18",
+        "@storybook/addon-centered": "^5.3.18",
         "@storybook/react": "^5.3.18",
         "babel-loader": "^8.1.0",
         "chai": "^4.2.0",
