--- a/packages/codistica-react/package.json
+++ b/packages/codistica-react/package.json
@@ -67,6 +67,8 @@
         "core-js": "^3.6.5",
         "eslint-plugin-prettier": "^3.1.3",
         "eventemitter3": "^4.0.0",
+        "jss": "^10.1.1",
+        "jss-preset-default": "^10.1.1",
         "mocha": "^7.1.2",
         "prettier": "^2.0.5",
         "react": "^16.13.1",
