--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "build:lib-es": "yarn run babel:lib-es && yarn run flow:copy-lib-es",
         "build:types": "yarn run tsc",
         "bump": "lerna version --no-push --no-changelog --no-git-tag--version",
-        "clean": "yarn run clean:dist && yarn run clean:jsdoc && yarn run clean:lib && yarn run clean:lib-es && yarn run clean:types && yarn run clean:coverage",
+        "clean": "yarn run clean:dist && yarn run clean:jsdoc && yarn run clean:lib && yarn run clean:lib-es && yarn run clean:types && yarn run clean:coverage && rimraf .eslintcache",
         "clean:dist": "rimraf \"./packages/*/dist\"",
         "clean:jsdoc": "rimraf \"./packages/*/jsdoc\"",
         "clean:lib": "rimraf \"./packages/*/lib\"",
@@ -40,7 +40,7 @@
         "coverage": "nyc --reporter=lcov yarn run test",
         "flow:copy-lib": "lerna exec --parallel --scope @codistica/react \"flow-copy-source ./src ./lib\"",
         "flow:copy-lib-es": "lerna exec --parallel --scope @codistica/react \"flow-copy-source ./src ./lib-es\"",
-        "lint": "eslint \"./packages/*/src/**/*.js\"",
+        "lint": "eslint \"./packages/*/src/**/*.js\" --cache",
         "prepack": "yarn run build",
         "prettify": "prettier --loglevel warn --write \"**/*.{js,json}\"",
         "run:demo": "yarn workspace @codistica/demo run start",
