--- a/packages/codistica-react/package.json
+++ b/packages/codistica-react/package.json
@@ -62,17 +62,10 @@
         "@codistica/browser": "^1.0.0-beta.2",
         "@codistica/core": "^1.0.0-beta.2",
         "@codistica/types": "^1.0.0-beta.2",
-        "@types/node": "^13.13.4",
-        "classnames": "^2.2.6",
         "core-js": "^3.6.5",
-        "eslint-plugin-prettier": "^3.1.3",
         "eventemitter3": "^4.0.0",
         "jss": "^10.1.1",
         "jss-preset-default": "^10.1.1",
-        "mocha": "^7.1.2",
-        "prettier": "^2.0.5",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
         "react-html-id": "^0.1.5",
         "react-spring": "^8.0.27"
     },
@@ -85,10 +78,14 @@
         "chai": "^4.2.0",
         "css-loader": "^3.5.3",
         "node-sass": "^4.14.0",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.2.0"
     },
     "peerDependencies": {
-        "node-sass": "^4.14.0"
+        "node-sass": "^4.14.0",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1"
     }
 }
