--- a/packages/codistica-react/package.json
+++ b/packages/codistica-react/package.json
@@ -53,8 +53,8 @@
         "node": ">=10.0.0"
     },
     "scripts": {
-        "storybook": "start-storybook -p 6007",
-        "build-storybook": "build-storybook",
+        "start": "start-storybook -p 6007",
+        "build": "build-storybook",
         "flow": "flow"
     },
     "dependencies": {
