[NEW] [*] - Create react-icons monorepo package.

--- a/package.json
+++ b/package.json
@@ -38,16 +38,17 @@
         "clean:types": "rimraf \"./packages/*/types\"",
         "clean:coverage": "rimraf ./.nyc_output",
         "coverage": "nyc --reporter=lcov yarn run test",
-        "flow:copy-lib": "lerna exec --parallel --scope @codistica/react \"flow-copy-source ./src ./lib\"",
-        "flow:copy-lib-es": "lerna exec --parallel --scope @codistica/react \"flow-copy-source ./src ./lib-es\"",
+        "flow:copy-lib": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons \"flow-copy-source ./src ./lib\"",
+        "flow:copy-lib-es": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons \"flow-copy-source ./src ./lib-es\"",
         "lint": "eslint \"./packages/*/src/**/*.js\" --cache",
         "prepack": "yarn run build",
         "prettify": "prettier --loglevel warn --write \"**/*.{js,json}\"",
         "start:demo": "yarn workspace @codistica/demo run start",
         "start:react": "yarn workspace @codistica/react run start",
+        "start:react-icons": "yarn workspace @codistica/react-icons run start",
         "test": "mocha \"./packages/*/lib/__tests__/*.test.js\"",
         "test:quick": "yarn run build:lib && yarn run test",
-        "tsc": "lerna exec --ignore @codistica/demo --ignore @codistica/react --parallel --no-bail \"tsc -p ./tsconfig.build.types.json\"",
+        "tsc": "lerna exec --ignore @codistica/demo --ignore @codistica/react --ignore @codistica/react-icons --parallel --no-bail \"tsc -p ./tsconfig.build.types.json\"",
         "uninstall": "yarn run clean && lerna clean --yes && rimraf ./node_modules"
     },
     "devDependencies": {
@@ -74,7 +75,7 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-react": "^7.19.0",
-        "flow-bin": "^0.123.0",
+        "flow-bin": "^0.129.0",
         "flow-copy-source": "^2.0.9",
         "husky": "^4.2.5",
         "jsdoc": "^3.6.4",
