[POLISH] [*] - Do some minor changes and cleanups.

--- a/package.json
+++ b/package.json
@@ -23,20 +23,21 @@
     "scripts": {
         "babel:lib": "lerna exec --ignore @codistica/demo --parallel \"cross-env NODE_ENV=production cross-env NPM_CONFIG_ES_MODULES=false babel --root-mode upward ./src --out-dir ./lib --copy-files\"",
         "babel:lib-es": "lerna exec --ignore @codistica/demo --parallel \"cross-env NODE_ENV=production cross-env NPM_CONFIG_ES_MODULES=true babel --root-mode upward ./src --out-dir ./lib-es --copy-files\"",
-        "build": "yarn run clean && yarn run build:dist && yarn run build:lib && yarn run build:lib-es && yarn run build:types && yarn run build:jsdoc && yarn run test",
+        "build": "yarn run clean && yarn run prettify && yarn run build:dist && yarn run build:lib && yarn run build:lib-es && yarn run build:types && yarn run build:jsdoc && yarn run test",
         "build:dist": "exit 0",
         "build:jsdoc": "lerna exec --ignore @codistica/demo --parallel \"jsdoc -c ../../.jsdocrc.js\"",
         "build:lib": "yarn run babel:lib && yarn run flow:copy-lib",
         "build:lib-es": "yarn run babel:lib-es && yarn run flow:copy-lib-es",
         "build:types": "yarn run tsc",
         "bump": "lerna version --no-push --no-changelog --no-git-tag-version",
-        "clean": "yarn run clean:dist && yarn run clean:jsdoc && yarn run clean:lib && yarn run clean:lib-es && yarn run clean:types && yarn run clean:coverage && rimraf .eslintcache",
+        "clean": "yarn run clean:build && yarn run clean:dist && yarn run clean:jsdoc && yarn run clean:lib && yarn run clean:lib-es && yarn run clean:types && yarn run clean:coverage && rimraf .eslintcache",
+        "clean:build": "rimraf \"./packages/*/build\"",
         "clean:dist": "rimraf \"./packages/*/dist\"",
         "clean:jsdoc": "rimraf \"./packages/*/jsdoc\"",
         "clean:lib": "rimraf \"./packages/*/lib\"",
         "clean:lib-es": "rimraf \"./packages/*/lib-es\"",
         "clean:types": "rimraf \"./packages/*/types\"",
-        "clean:coverage": "rimraf ./.nyc_output",
+        "clean:coverage": "rimraf ./.nyc_output ./coverage",
         "coverage": "nyc --reporter=lcov yarn run test",
         "flow:copy-lib": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons \"flow-copy-source ./src ./lib\"",
         "flow:copy-lib-es": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons \"flow-copy-source ./src ./lib-es\"",
