--- a/packages/codistica-react/package.json
+++ b/packages/codistica-react/package.json
@@ -63,8 +63,6 @@
         "@codistica/core": "^1.0.0-beta.4",
         "@codistica/types": "^1.0.0-beta.2",
         "@date-io/moment": "1.x",
-        "@material-ui/core": "^4.10.2",
-        "@material-ui/pickers": "^3.2.10",
         "core-js": "^3.6.5",
         "eventemitter3": "^4.0.0",
         "jss": "^10.1.1",
@@ -89,6 +87,9 @@
         "style-loader": "^1.2.0"
     },
     "peerDependencies": {
+        "@material-ui/core": "^4.10.2",
+        "@material-ui/icons": "^4.9.1",
+        "@material-ui/pickers": "^3.2.10",
         "node-sass": "^4.14.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1"
