[NEW] [*] - Update all packages dependencies and adjust code.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "build:jsdoc": "lerna exec --ignore @codistica/demo --parallel \"jsdoc -c ../../.jsdocrc.js\"",
         "build:lib": "yarn run babel:lib && yarn run flow:copy-lib",
         "build:lib-es": "yarn run babel:lib-es && yarn run flow:copy-lib-es",
-        "build:types": "yarn run tsc",
+        "build:types": "yarn run tsc:core && yarn run tsc:other",
         "bump": "lerna version --no-push --no-changelog --no-git-tag-version",
         "clean": "yarn run clean:build && yarn run clean:dist && yarn run clean:jsdoc && yarn run clean:lib && yarn run clean:lib-es && yarn run clean:types && yarn run clean:coverage && rimraf .eslintcache",
         "clean:build": "rimraf \"./packages/*/build\"",
@@ -49,43 +49,44 @@
         "start:react-icons": "yarn workspace @codistica/react-icons run start",
         "test": "mocha \"./packages/*/lib/__tests__/*.test.js\"",
         "test:quick": "yarn run build:lib && yarn run test",
-        "tsc": "lerna exec --ignore @codistica/demo --ignore @codistica/react --ignore @codistica/react-icons --parallel --no-bail \"tsc -p ./tsconfig.build.types.json\"",
+        "tsc:core": "lerna exec --scope @codistica/core --scope @codistica/browser --scope @codistica/node \"tsc -p ./tsconfig.build.types.json\"",
+        "tsc:other": "lerna exec --ignore @codistica/core --ignore @codistica/browser --ignore @codistica/node --ignore @codistica/demo --ignore @codistica/react --ignore @codistica/react-icons --parallel --no-bail \"tsc -p ./tsconfig.build.types.json\"",
         "uninstall": "yarn run clean && lerna clean --yes && rimraf ./node_modules"
     },
     "devDependencies": {
-        "@babel/cli": "^7.8.4",
-        "@babel/core": "^7.9.0",
-        "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/preset-flow": "^7.9.0",
-        "@babel/preset-react": "^7.9.4",
+        "@babel/cli": "^7.11.6",
+        "@babel/core": "^7.11.6",
+        "@babel/plugin-proposal-class-properties": "^7.10.4",
+        "@babel/preset-flow": "^7.10.4",
+        "@babel/preset-react": "^7.10.4",
         "@codistica/babel-preset-default": "^1.0.1",
-        "@codistica/eslint-config-default": "^1.0.1",
+        "@codistica/eslint-config-default": "^1.1.0",
         "@codistica/husky-hooks-handlers": "^1.0.1",
         "@codistica/prettier-config-default": "^1.0.1",
-        "@types/chai": "^4.2.11",
-        "@types/mocha": "^7.0.2",
-        "@types/node": "^13.13.4",
-        "@types/react": "^16.9.34",
-        "@types/tapable": "^1.0.5",
-        "@types/webpack": "^4.41.12",
+        "@types/chai": "^4.2.12",
+        "@types/mocha": "^8.0.3",
+        "@types/node": "^14.10.1",
+        "@types/react": "^16.9.49",
+        "@types/tapable": "^1.0.6",
+        "@types/webpack": "^4.41.22",
         "cross-env": "^7.0.2",
         "eslint": "^6.8.0",
-        "eslint-plugin-flowtype": "^4.7.0",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-jsdoc": "^24.0.0",
+        "eslint-plugin-flowtype": "^5.2.0",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-jsdoc": "^30.4.2",
         "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-prettier": "^3.1.3",
-        "eslint-plugin-react": "^7.19.0",
-        "flow-bin": "^0.129.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-react": "^7.20.6",
+        "flow-bin": "^0.133.0",
         "flow-copy-source": "^2.0.9",
-        "husky": "^4.2.5",
-        "jsdoc": "^3.6.4",
+        "husky": "^4.3.0",
+        "jsdoc": "^3.6.5",
         "jsdoc-babel": "^0.5.0",
-        "lerna": "^3.20.2",
-        "mocha": "^7.1.2",
-        "nyc": "^15.0.1",
-        "prettier": "^2.0.5",
+        "lerna": "^3.22.1",
+        "mocha": "^8.1.3",
+        "nyc": "^15.1.0",
+        "prettier": "^2.1.1",
         "rimraf": "^3.0.2",
-        "typescript": "^3.8.3"
+        "typescript": "^4.0.2"
     }
 }
