--- a/packages/codistica-browser/package.json
+++ b/packages/codistica-browser/package.json
@@ -55,11 +55,11 @@
         "node": ">=10.0.0"
     },
     "dependencies": {
-        "@babel/runtime-corejs3": "^7.9.2",
+        "@babel/runtime-corejs3": "^7.11.2",
         "@codistica/core": "^1.0.0-beta.4",
         "@codistica/types": "^1.0.0-beta.2",
-        "core-js": "^3.6.5",
         "eventemitter3": "^4.0.4"
+        "core-js": "^3.6.5"
     },
     "devDependencies": {
         "chai": "^4.2.0"
