--- a/packages/codistica-demo/package.json
+++ b/packages/codistica-demo/package.json
@@ -57,6 +57,7 @@
         "@codistica/browser": "^1.0.0-beta.5",
         "@codistica/core": "^1.0.0-beta.4",
         "@codistica/react": "^1.0.0-beta.7",
+        "@codistica/react-mui": "^1.0.0-beta.0",
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
         "@material-ui/pickers": "^3.2.10",
