--- a/package.json
+++ b/package.json
@@ -75,9 +75,11 @@
         "eslint-plugin-flowtype": "^5.2.0",
         "eslint-plugin-import": "^2.22.0",
         "eslint-plugin-jsdoc": "^30.4.2",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.20.6",
+        "eslint-plugin-react-hooks": "^4.1.2",
         "flow-bin": "^0.133.0",
         "flow-copy-source": "^2.0.9",
         "husky": "^4.3.0",
