[NEW] [*] - Improve ESLint, Prettier, Babel and JSDoc configuration.

--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
         "hooks": {
             "pre-commit": "codistica-husky-hooks-handlers pre-commit prettify",
             "commit-msg": "codistica-husky-hooks-handlers commit-msg ./packages",
-            "pre-push": "codistica-husky-hooks-handlers pre-push build"
+            "pre-push": "codistica-husky-hooks-handlers pre-push test:quick"
         }
     },
     "scripts": {
         "babel:lib": "lerna exec --ignore @codistica/demo --parallel \"cross-env NODE_ENV=production cross-env NPM_CONFIG_ES_MODULES=false babel --root-mode upward ./src --out-dir ./lib --copy-files\"",
         "babel:lib-es": "lerna exec --ignore @codistica/demo --parallel \"cross-env NODE_ENV=production cross-env NPM_CONFIG_ES_MODULES=true babel --root-mode upward ./src --out-dir ./lib-es --copy-files\"",
-        "build": "yarn run clean && yarn run prettify && yarn run build:dist && yarn run build:lib && yarn run build:lib-es && yarn run build:types && yarn run build:jsdoc && yarn run test",
+        "build": "yarn run clean && yarn run prettify && lerna run prebuild --parallel && yarn run build:dist && yarn run build:lib && yarn run build:lib-es && yarn run build:types && yarn run build:jsdoc",
         "build:dist": "exit 0",
-        "build:jsdoc": "lerna exec --ignore @codistica/demo --parallel \"jsdoc -c ../../.jsdocrc.js\"",
+        "build:jsdoc": "lerna exec --ignore @codistica/demo --ignore @codistica/react --ignore @codistica/react-icons --ignore @codistica/react-mui --parallel \"jsdoc -c ../../.jsdocrc.js\"",
         "build:lib": "yarn run babel:lib && yarn run flow:copy-lib",
         "build:lib-es": "yarn run babel:lib-es && yarn run flow:copy-lib-es",
         "build:types": "yarn run tsc:core && yarn run tsc:other",
@@ -41,8 +41,8 @@
         "coverage": "nyc --reporter=lcov yarn run test",
         "flow:copy-lib": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons --scope @codistica/react-mui \"flow-copy-source ./src ./lib\"",
         "flow:copy-lib-es": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons --scope @codistica/react-mui \"flow-copy-source ./src ./lib-es\"",
-        "lint": "eslint \"./packages/*/src/**/*.js\" --cache",
-        "prepack": "yarn run build",
+        "lint": "eslint \"./packages/*/**/*.js\" --cache",
+        "prepack": "yarn run build && yarn run test",
         "prettify": "prettier --loglevel warn --write \"**/*.{js,json}\"",
         "start:demo": "cross-env HTTPS=true yarn workspace @codistica/demo run start",
         "start:react": "yarn workspace @codistica/react run start",
@@ -57,11 +57,12 @@
     "devDependencies": {
         "@babel/cli": "^7.11.6",
         "@babel/core": "^7.11.6",
+        "@babel/eslint-plugin": "^7.12.1",
         "@babel/plugin-proposal-class-properties": "^7.10.4",
         "@babel/preset-flow": "^7.10.4",
         "@babel/preset-react": "^7.10.4",
         "@codistica/babel-preset-default": "^1.0.1",
-        "@codistica/eslint-config-default": "^1.1.0",
+        "@codistica/eslint-config-default": "^2.0.0",
         "@codistica/husky-hooks-handlers": "^1.0.1",
         "@codistica/prettier-config-default": "^1.0.1",
         "@types/chai": "^4.2.12",
@@ -71,10 +72,10 @@
         "@types/tapable": "^1.0.6",
         "@types/webpack": "^4.41.22",
         "cross-env": "^7.0.2",
-        "eslint": "^6.8.0",
+        "eslint": "^6.6.0",
         "eslint-plugin-flowtype": "^5.2.0",
         "eslint-plugin-import": "^2.22.0",
-        "eslint-plugin-jsdoc": "^30.4.2",
+        "eslint-plugin-jsdoc": "^30.5.1",
         "eslint-plugin-jsx-a11y": "^6.3.1",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^3.1.4",
