--- a/packages/codistica-node/package.json
+++ b/packages/codistica-node/package.json
@@ -54,6 +54,9 @@
     "engines": {
         "node": ">=10.0.0"
     },
+    "scripts": {
+        "prebuild": "echo \"No pre-build script.\""
+    },
     "dependencies": {
         "@babel/runtime-corejs3": "^7.11.2",
         "@codistica/core": "^1.0.0-beta.5",
