[NEW] [*] - Add/fix dependencies.

--- a/packages/codistica-node/package.json
+++ b/packages/codistica-node/package.json
@@ -65,6 +65,7 @@
         "core-js": "^3.6.5"
     },
     "devDependencies": {
-        "chai": "^4.2.0"
+        "chai": "^4.2.0",
+        "memfs": "^3.2.0"
     }
 }
