--- a/packages/codistica-react-icons/package.json
+++ b/packages/codistica-react-icons/package.json
@@ -55,28 +55,32 @@
     "scripts": {
         "start": "start-storybook -p 6008",
         "build": "build-storybook",
+        "build:icons": "babel-node --config-file ../../babel.config.js scripts/build-icons.js",
         "flow": "flow",
         "prebuild": "echo \"No pre-build script.\""
     },
     "dependencies": {
-        "@codistica/core": "^1.0.0-beta.5",
         "@babel/runtime-corejs3": "^7.11.2",
+        "@codistica/core": "^1.0.0-beta.5",
         "@codistica/react": "^1.0.0-beta.8",
         "core-js": "^3.6.5"
     },
     "devDependencies": {
         "@babel/core": "^7.11.6",
+        "@babel/node": "^7.12.6",
         "@storybook/addon-backgrounds": "^6.0.21",
         "@storybook/addon-centered": "^5.3.21",
         "@storybook/react": "^6.0.21",
         "babel-loader": "^8.1.0",
         "chai": "^4.2.0",
         "css-loader": "^4.3.0",
+        "mustache": "^4.0.1",
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "sass-loader": "^10.0.2",
-        "style-loader": "^1.2.1"
+        "style-loader": "^1.2.1",
+        "svgo": "^1.3.2"
     },
     "peerDependencies": {
         "node-sass": "^4.14.1",
