--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "start:react": "yarn workspace @codistica/react run start",
         "start:react-icons": "yarn workspace @codistica/react-icons run start",
         "start:react-mui": "yarn workspace @codistica/react-mui run start",
-        "test": "mocha \"./packages/*/lib/__tests__/*.test.js\"",
+        "test": "mocha \"./packages/*/lib/__tests__/index.test.js\"",
         "test:quick": "yarn run build:lib && yarn run test",
         "tsc:core": "lerna exec --scope @codistica/core --scope @codistica/browser --scope @codistica/node \"tsc -p ./tsconfig.build.types.json\"",
         "tsc:other": "lerna exec --ignore @codistica/core --ignore @codistica/browser --ignore @codistica/node --ignore @codistica/demo --ignore @codistica/react --ignore @codistica/react-icons --ignore @codistica/react-mui --parallel --no-bail \"tsc -p ./tsconfig.build.types.json\"",
