--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
         "build:lib": "yarn run babel:lib && yarn run flow:copy-lib",
         "build:lib-es": "yarn run babel:lib-es && yarn run flow:copy-lib-es",
         "build:types": "yarn run tsc:core && yarn run tsc:other",
-        "bump": "lerna version --no-push --no-changelog --no-git-tag-version",
         "clean": "yarn run clean:build && yarn run clean:dist && yarn run clean:jsdoc && yarn run clean:lib && yarn run clean:lib-es && yarn run clean:types && yarn run clean:coverage && rimraf .eslintcache",
-        "clean:build": "rimraf \"./packages/*/build\"",
+        "clean:build": "rimraf \"./packages/*/build ./packages/*/build-icons-output\"",
         "clean:dist": "rimraf \"./packages/*/dist\"",
         "clean:jsdoc": "rimraf \"./packages/*/jsdoc\"",
         "clean:lib": "rimraf \"./packages/*/lib\"",
@@ -42,9 +41,11 @@
         "flow:copy-lib": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons --scope @codistica/react-mui \"flow-copy-source ./src ./lib\"",
         "flow:copy-lib-es": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons --scope @codistica/react-mui \"flow-copy-source ./src ./lib-es\"",
         "lint": "eslint \"./packages/*/**/*.js\" --cache",
-        "prepack": "yarn run build && yarn run test",
-        "prettify": "prettier --loglevel warn --write \"**/*.{js,json}\"",
-        "start:demo": "cross-env HTTPS=true yarn workspace @codistica/demo run start",
+        "prepack": "yarn uninstall && yarn install && yarn run build && yarn run test",
+        "prettify": "prettier --loglevel warn --write \"**/*.{js,json,md}\"",
+        "packages:bump": "lerna version --no-push --no-changelog --no-git-tag-version",
+        "packages:publish": "lerna publish from-git",
+        "start:demo": "yarn workspace @codistica/demo run start",
         "start:react": "yarn workspace @codistica/react run start",
         "start:react-icons": "yarn workspace @codistica/react-icons run start",
         "start:react-mui": "yarn workspace @codistica/react-mui run start",
