--- a/package.json
+++ b/package.json
@@ -92,6 +92,6 @@
         "nyc": "^15.1.0",
         "prettier": "^2.1.1",
         "rimraf": "^3.0.2",
-        "typescript": "^4.0.2"
+        "typescript": "4.0.2"
     }
 }
