--- a/packages/codistica-react-icons/package.json
+++ b/packages/codistica-react-icons/package.json
@@ -77,17 +77,17 @@
         "css-loader": "^4.3.0",
         "eslint": "^7.13.0",
         "mustache": "^4.0.1",
-        "node-sass": "^4.14.1",
         "prettier": "^2.1.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "sass-loader": "^10.0.2",
         "style-loader": "^1.2.1",
-        "svgo": "^1.3.2"
+        "svgo": "^1.3.2",
+        "sass": "^1.34.0"
     },
     "peerDependencies": {
-        "node-sass": "^4.14.1",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-dom": "^17.0.1",
+        "sass": "^1.34.0"
     }
 }
