--- a/packages/codistica-react-mui/package.json
+++ b/packages/codistica-react-mui/package.json
@@ -74,18 +74,18 @@
         "babel-loader": "^8.1.0",
         "chai": "^4.2.0",
         "css-loader": "^4.3.0",
-        "node-sass": "^4.14.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "sass-loader": "^10.0.2",
-        "style-loader": "^1.2.1"
+        "style-loader": "^1.2.1",
+        "sass": "^1.34.0"
     },
     "peerDependencies": {
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
         "@material-ui/pickers": "^3.2.10",
-        "node-sass": "^4.14.1",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-dom": "^17.0.1",
+        "sass": "^1.34.0"
     }
 }
