--- a/packages/codistica-react/package.json
+++ b/packages/codistica-react/package.json
@@ -79,15 +79,15 @@
         "babel-loader": "^8.1.0",
         "chai": "^4.2.0",
         "css-loader": "^4.3.0",
-        "node-sass": "^4.14.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "sass-loader": "^10.0.2",
-        "style-loader": "^1.2.1"
+        "style-loader": "^1.2.1",
+        "sass": "^1.34.0"
     },
     "peerDependencies": {
-        "node-sass": "^4.14.1",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-dom": "^17.0.1",
+        "sass": "^1.34.0"
     }
 }
