--- a/packages/codistica-demo/package.json
+++ b/packages/codistica-demo/package.json
@@ -74,7 +74,7 @@
         "@testing-library/react": "^11.2.2",
         "@testing-library/user-event": "^12.5.0",
         "@types/jest": "^26.0.13",
-        "sass": "^1.34.0",
-        "react-scripts": "4.0.3"
+        "react-scripts": "4.0.3",
+        "sass": "^1.34.0"
     }
 }
