--- a/packages/codistica-react-icons/package.json
+++ b/packages/codistica-react-icons/package.json
@@ -80,10 +80,10 @@
         "prettier": "^2.1.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "sass": "^1.34.0",
         "sass-loader": "^10.0.2",
         "style-loader": "^1.2.1",
-        "svgo": "^1.3.2",
-        "sass": "^1.34.0"
+        "svgo": "^1.3.2"
     },
     "peerDependencies": {
         "react": "^17.0.1",
