--- a/packages/codistica-react/package.json
+++ b/packages/codistica-react/package.json
@@ -81,9 +81,9 @@
         "css-loader": "^4.3.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "sass": "^1.34.0",
         "sass-loader": "^10.0.2",
-        "style-loader": "^1.2.1",
-        "sass": "^1.34.0"
+        "style-loader": "^1.2.1"
     },
     "peerDependencies": {
         "react": "^17.0.1",
