--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         }
     },
     "scripts": {
-        "babel:lib": "lerna exec --ignore @codistica/demo --parallel \"cross-env NODE_ENV=production cross-env NPM_CONFIG_ES_MODULES=false babel --root-mode upward ./src --out-dir ./lib --copy-files\"",
-        "babel:lib-es": "lerna exec --ignore @codistica/demo --parallel \"cross-env NODE_ENV=production cross-env NPM_CONFIG_ES_MODULES=true babel --root-mode upward ./src --out-dir ./lib-es --copy-files\"",
+        "babel:lib": "lerna exec --ignore @codistica/demo --parallel \"cross-env NODE_ENV=production cross-env NPM_CONFIG_ES_MODULES=false babel --root-mode upward ./src --out-dir ./lib --copy-files --source-maps\"",
+        "babel:lib-es": "lerna exec --ignore @codistica/demo --parallel \"cross-env NODE_ENV=production cross-env NPM_CONFIG_ES_MODULES=true babel --root-mode upward ./src --out-dir ./lib-es --copy-files --source-maps\"",
         "build": "yarn run clean && yarn run prettify && lerna run prebuild --parallel && yarn run build:dist && yarn run build:lib && yarn run build:lib-es && yarn run build:types && yarn run build:jsdoc",
         "build:dist": "exit 0",
         "build:jsdoc": "lerna exec --ignore @codistica/demo --ignore @codistica/react --ignore @codistica/react-icons --ignore @codistica/react-mui --parallel \"jsdoc -c ../../.jsdocrc.js\"",
@@ -30,7 +30,7 @@
         "build:lib-es": "yarn run babel:lib-es && yarn run flow:copy-lib-es",
         "build:types": "yarn run tsc:core && yarn run tsc:other",
         "clean": "yarn run clean:build && yarn run clean:dist && yarn run clean:jsdoc && yarn run clean:lib && yarn run clean:lib-es && yarn run clean:types && yarn run clean:coverage && rimraf .eslintcache",
-        "clean:build": "rimraf \"./packages/*/build ./packages/*/build-icons-output\"",
+        "clean:build": "rimraf \"./packages/*/build\" \"./packages/*/build-icons-output\" \"./packages/*/storybook-static\"",
         "clean:dist": "rimraf \"./packages/*/dist\"",
         "clean:jsdoc": "rimraf \"./packages/*/jsdoc\"",
         "clean:lib": "rimraf \"./packages/*/lib\"",
@@ -38,10 +38,10 @@
         "clean:types": "rimraf \"./packages/*/types\"",
         "clean:coverage": "rimraf ./.nyc_output ./coverage",
         "coverage": "nyc --reporter=lcov yarn run test",
-        "flow:copy-lib": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons --scope @codistica/react-mui \"flow-copy-source ./src ./lib\"",
-        "flow:copy-lib-es": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons --scope @codistica/react-mui \"flow-copy-source ./src ./lib-es\"",
+        "flow:copy-lib": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons --scope @codistica/react-mui \"flow-copy-source --ignore scripts/**/* ./src ./lib\"",
+        "flow:copy-lib-es": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons --scope @codistica/react-mui \"flow-copy-source --ignore scripts/**/* ./src ./lib-es\"",
         "lint": "eslint \"./packages/*/**/*.js\" --cache",
-        "prepack": "yarn uninstall && yarn install && yarn run build && yarn run test",
+        "prepack": "yarn uninstall && yarn install --frozen-lockfile && yarn run build && yarn run test",
         "prettify": "prettier --loglevel warn --write \"**/*.{js,json,md}\"",
         "packages:bump": "lerna version --no-push --no-changelog --no-git-tag-version",
         "packages:publish": "lerna publish from-git",
@@ -55,6 +55,7 @@
         "tsc:other": "lerna exec --ignore @codistica/core --ignore @codistica/browser --ignore @codistica/node --ignore @codistica/demo --ignore @codistica/react --ignore @codistica/react-icons --ignore @codistica/react-mui --parallel --no-bail \"tsc -p ./tsconfig.build.types.json\"",
         "uninstall": "yarn run clean && lerna clean --yes && rimraf ./node_modules"
     },
+    "dependencies": {},
     "devDependencies": {
         "@babel/cli": "^7.11.6",
         "@babel/core": "^7.11.6",
