--- a/packages/codistica-demo/package.json
+++ b/packages/codistica-demo/package.json
@@ -22,7 +22,8 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/codistica/codistica-js.git"
+        "url": "https://github.com/codistica/codistica-js.git",
+        "directory": "packages/codistica-demo"
     },
     "bugs": {
         "url": "https://github.com/codistica/codistica-js/issues"
