--- a/packages/codistica-react/package.json
+++ b/packages/codistica-react/package.json
@@ -36,7 +36,8 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/codistica/codistica-js.git"
+        "url": "https://github.com/codistica/codistica-js.git",
+        "directory": "packages/codistica-react"
     },
     "bugs": {
         "url": "https://github.com/codistica/codistica-js/issues"
@@ -48,7 +49,7 @@
         "node": ">=10.0.0"
     },
     "scripts": {
-        "start": "start-storybook -p 6007",
+        "start": "start-storybook -p 3010",
         "build": "build-storybook",
         "flow": "flow",
         "prebuild": "echo \"No pre-build script.\""
