--- a/packages/codistica-react-icons/package.json
+++ b/packages/codistica-react-icons/package.json
@@ -48,10 +48,13 @@
     "engines": {
         "node": ">=10.0.0"
     },
+    "bin": {
+        "codistica-build-icons": "./lib/scripts/build-icons/index.js"
+    },
     "scripts": {
         "start": "start-storybook -p 3011",
         "build": "build-storybook",
-        "utils:build-icons": "babel-node --config-file ../../babel.config.js scripts/build-icons.js",
+        "utils:build-icons": "babel-node --config-file ../../babel.config.js ./src/scripts/build-icons/index.js --output ./build-icons-output",
         "flow": "flow",
         "prebuild": "echo \"No pre-build script.\""
     },
@@ -79,7 +82,7 @@
         "sass": "^1.34.0",
         "sass-loader": "^10.0.2",
         "style-loader": "^1.2.1",
-        "svgo": "^1.3.2"
+        "svgo": "^2.8.0"
     },
     "peerDependencies": {
         "react": "^17.0.1",
