--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "clean:lib-es": "rimraf \"./packages/*/lib-es\"",
         "clean:types": "rimraf \"./packages/*/types\"",
         "clean:coverage": "rimraf ./.nyc_output ./coverage",
+        "codistica-dev-tools": "./packages/codistica-dev-tools/lib/bin/codistica-dev-tools.js",
         "coverage": "nyc --reporter=lcov yarn run test",
         "flow:copy-lib": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons --scope @codistica/react-mui \"flow-copy-source --ignore scripts/**/* ./src ./lib\"",
         "flow:copy-lib-es": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons --scope @codistica/react-mui \"flow-copy-source --ignore scripts/**/* ./src ./lib-es\"",
