--- a/packages/codistica-react-icons/package.json
+++ b/packages/codistica-react-icons/package.json
@@ -54,7 +54,7 @@
     "scripts": {
         "start": "start-storybook -p 3011",
         "build": "build-storybook",
-        "utils:build-icons": "babel-node --config-file ../../babel.config.js ./src/scripts/build-icons/index.js --output ./build-icons-output",
+        "codistica-build-icons": "./lib/scripts/build-icons/index.js --output ./build-icons-output",
         "flow": "flow",
         "prebuild": "echo \"No pre-build script.\""
     },
@@ -65,7 +65,6 @@
     },
     "devDependencies": {
         "@babel/core": "^7.11.6",
-        "@babel/node": "^7.12.6",
         "@codistica/core": "^1.0.0-beta.6",
         "@codistica/node": "^1.0.0-beta.6",
         "@storybook/addon-backgrounds": "^6.0.21",
